# mythical-client

./: Cargo.toml
components/mod_manager/: Cargo.toml  README.md
components/mod_manager/src/: config.rs  dirs.rs  game.rs  game_config.rs  game_discovery.rs  game_mod.rs  game_search.rs  lib.rs  task_guard.rs
components/mod_manager/src/config/: game.rs  known_games.rs  settings.rs
src/: main.rs
