[package]
name = "mod_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lock = "2.4.0"
derivative = "2.2.0"
flate2 = "1.0.22"
futures = "0.3.19"
pin-project = "1.0.10"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
thiserror = "1.0.30"
tokio = "1.15.0"
